Add interfaces for map, world, and game data awareness; enhance GameData and logic services
Co-authored-by: Liem <LiemQLe@users.noreply.github.com>